--- a/css/style.css
+++ b/css/style.css
@@ -7607,7 +7607,7 @@ p {
   font-size: 30px;
   line-height: 41px;
   color: #fff;
-  font-family: "Sanchez", times, serif;
+  font-family: ;
 }
 .fh5co-testimony blockquote > p em {
   font-family: "Playfair Display", times, serif;
